--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "start": "node ."
+    "start": "NODE_OPTIONS=--openssl-legacy-provider node ."
   },
   "license": "Apache-2.0"
 }
